--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -30,7 +30,7 @@ tab_title_separator: " - "
 
 # 强制所有链接升级为 HTTPS（适用于图片等资源出现 HTTP 混入报错）
 # Force all links to be HTTPS (applicable to HTTP mixed error)
-force_https: false
+force_https: true
 
 # 代码块的增强配置
 # Enhancements to code blocks
@@ -985,8 +985,9 @@ about:
   # More icons can be found from https://hexo.fluid-dev.com/docs/en/icon/  `class` is the css class of the icon. If adding `qrcode`, the icon is no longer a link, but a hovering QR code
   icons:
     - { class: "iconfont icon-github-fill", link: "https://github.com/Suda-Baka", tip: "GitHub" }
-    - { class: "iconfont icon-douban-fill", link: "https://douban.com", tip: "豆瓣" }
-    - { class: "iconfont icon-wechat-fill", qrcode: "/img/favicon.png" }
+    - { class: "iconfont icon-twitter-fill", link: "https://x.com/Suda_Baka", tip: "X" }
+    - { class: "iconfont icon-wechat-fill", qrcode: "/img/wechatcode.png" }
+    - { class: "iconfont icon-qq-fill", qrcode: "/img/qqcode.png" }
 
 
 #---------------------------
