--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle: ''
+title: 徽忆
+subtitle: '此时相望不相闻，愿逐月华流照君'
 description: ''
 keywords:
-author: John Doe
+author: Suda-Baka
 language: zh-CN
 timezone: ''
 
