--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -114,7 +114,7 @@ fun_features:
     visible: hover
 
     # Options: § | # | ❡
-    icon: ""
+    icon: "#"
 
   # 加载进度条
   # Progress bar when loading
@@ -238,7 +238,7 @@ custom_js:
 # 指定自定义 .css 文件路径，用法和 custom_js 相同
 # The usage is the same as custom_js
 custom_css:
-  - /css/Font.css  # 引用自定义的 CSS 文件
+  - /css/font.css  # 引用自定义的 CSS 文件
 
 # 网页访问统计
 # Analysis of website visitors
