更新 _config.fluid.yml

--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -976,7 +976,7 @@ tag:
 #---------------------------
 about:
   enable: true
-  banner_img: https://t.alcy.cc/acg/
+  banner_img: https://t.alcy.cc/moez/
   banner_img_height: 60
   banner_mask_alpha: 0.3
   avatar: https://avatars.githubusercontent.com/u/192978705?s=400&u=26f4e6ea1b9d4f746a1ad12d45cb176475580716&v=4
