--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -114,7 +114,7 @@ fun_features:
     visible: hover
 
     # Options: § | # | ❡
-    icon: "#"
+    icon: "§"
 
   # 加载进度条
   # Progress bar when loading
@@ -594,7 +594,7 @@ post:
       awl: 2
       # 每分钟阅读字数，如果大部分是技术文章可适度调低
       # Words per minute
-      wpm: 60
+      wpm: 45
 
     # 浏览量计数
     # Number of visits
@@ -673,7 +673,7 @@ post:
     # CreativeCommons license
     # See: https://creativecommons.org/share-your-work/cclicenses/
     # Options: BY | BY-SA | BY-ND | BY-NC | BY-NC-SA | BY-NC-ND | ZERO
-    license: 'BY'
+    license: 'BY-NC-SA'
 
     # 显示作者
     author:
