更新 _config.fluid.yml

--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -391,7 +391,7 @@ search:
   # 搜索的范围
   # Search field
   # Options: post | page | all
-  field: post
+  field: all
 
   # 搜索是否扫描正文
   # If true, search will scan the post content
@@ -483,7 +483,7 @@ footer:
 index:
   # 首页 Banner 头图，可以是相对路径或绝对路径，以下相同
   # Path of Banner image, can be a relative path or an absolute path, the same on other pages
-  banner_img: https://t.mwm.moe/fj/
+  banner_img: https://t.alcy.cc/moez/
 
   # 头图高度，屏幕百分比
   # Height ratio of banner image
