--- a/themes/fluid/_config.yml
+++ b/themes/fluid/_config.yml
@@ -16,6 +16,11 @@
 # Global
 #---------------------------
 
+# 背景的TrymenT时钟特效，如果需要切换背景图片请在主题目录下替换 /source/img/img.png
+# See: https://github.com/Tokisaki-Galaxy/TrymenT-ClocK
+background_trymentclock:
+  enable: true
+
 # 用于浏览器标签的图标
 # Icon for browser tab
 favicon: /img/fluid.png
